# SIBR_SDF_Lattice_Solver

./: .gitignore  Cargo.toml  README.md
.claude/: settings.json
.github/workflows/: ci.yml
SDF_Lattice_Knowledge_Base/: README.md
SDF_Lattice_Knowledge_Base/.obsidian/: workspace.json
SDF_Lattice_Knowledge_Base/Architecture/: Cargo Workspace Configuration.md  Core Principles.md  Workspace Architecture MOC.md  Workspace Layout.md  wgpu.md  winit.md
SDF_Lattice_Knowledge_Base/Architecture/Crates/: Crates Index.md  cli crate.md  gpu crate.md  lattice-gen crate.md  preview crate.md  sdf crate.md  xtask crate.md
SDF_Lattice_Knowledge_Base/Architecture/Patterns/: Binary Strategy.md  CPU Reference Path.md  Feature Gating.md  GPU Boundary.md  Headless First.md  Patterns Index.md  Shared Dependencies.md  Workspace Lints and Profiles.md  winit Lifecycle.md
SDF_Lattice_Knowledge_Base/Domain Knowledge/: AM Platforms.md  Domain Knowledge MOC.md  GPU Compute Pipeline.md  Isosurface Extraction Methods.md  Lattice Generation Pipeline.md  Mesh Decimation.md  Meshing Complexity Analysis.md  Pressure Drop Correlation.md  Printing Artifacts and Compensation.md  SDF Primitives Catalog.md  SDF vs Mesh Booleans.md  Three-Layer Stack.md  Unit Cell Topologies.md
SDF_Lattice_Knowledge_Base/Engineering Philosophy/: Engineering Philosophy MOC.md  Output Format.md
SDF_Lattice_Knowledge_Base/Engineering Philosophy/Principles/: Explicit Not Magical.md  Human Understanding First.md  Normal Usage Is Not Testing.md  Principles Index.md  Reason About Correctness.md  Reasoning Beside Code.md  Regression Discipline.md  Sharp Oracles.md  Tests Should Make Programs Fail.md
SDF_Lattice_Knowledge_Base/Rust Practices/: Rust Practices Checklist.md  Rust Practices MOC.md
SDF_Lattice_Knowledge_Base/Rust Practices/Effect Isolation/: Pure Core Effectful Edges.md  Tests Without Heroics.md  Traits as Seams.md
SDF_Lattice_Knowledge_Base/Rust Practices/Error Handling/: Domain Errors at Boundaries.md  Result vs Panic.md
SDF_Lattice_Knowledge_Base/Rust Practices/Foundational/: Predictable APIs.md  Push Correctness Left.md  Type System as Design Tool.md
SDF_Lattice_Knowledge_Base/Rust Practices/Functions and Data/: Boring Data Layouts.md  Small Functions Narrow Contracts.md
SDF_Lattice_Knowledge_Base/Rust Practices/Ownership and Mutation/: Minimize Shared Mutability.md  Obvious Ownership.md  Unsafe Quarantine.md
SDF_Lattice_Knowledge_Base/Rust Practices/Testing/: Edge Cases and Properties.md  Three Levels of Tests.md
SDF_Lattice_Knowledge_Base/Rust Practices/Tooling and Quality/: CI Quality Bar.md  Clippy as Discipline.md  Documentation as Truth.md
SDF_Lattice_Knowledge_Base/Rust Practices/Type-Driven Design/: Checked Constructors and Builders.md  Make Invalid States Unrepresentable.md  Newtypes and Domain Types.md  State Transition Types.md
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  main.rs  progress.rs  run.rs
crates/lattice-gen/: Cargo.toml
crates/lattice-gen/src/: error.rs  grid.rs  job.rs  lib.rs  primitive.rs  properties.rs  strut.rs
crates/lattice-gen/src/cell/: bccxy.rs  cubic.rs  kelvin.rs  mod.rs
crates/lattice-gen/src/mesh/: grid.rs  mod.rs  smooth.rs  subdivide.rs  weld.rs
crates/lattice-gen/src/mesh/export/: obj.rs  stl.rs
crates/lattice-gen/src/mesh/marching_cubes/: classic.rs  mod.rs
crates/lattice-gen/src/mesh/marching_cubes/mc33/: decider.rs  mod.rs
crates/lattice-gen/src/mesh/marching_cubes/tables/: mod.rs
crates/lattice-gen/tests/: composes_as_exact.rs  meshing.rs  progress.rs
crates/mesh/: Cargo.toml
crates/mesh/src/: grid.rs  lib.rs  progress.rs
crates/mesh/src/export/: mod.rs  obj.rs  stl.rs
crates/mesh/src/marching_cubes/: classic.rs  mod.rs
crates/mesh/src/marching_cubes/mc33/: case10.rs  case12.rs  case13.rs  case3.rs  case4.rs  case6.rs  case7.rs  cases.rs  decider.rs  mod.rs  unambiguous.rs
crates/mesh/src/marching_cubes/tables/: classic.rs
crates/mesh/src/postprocess/: mod.rs  smooth.rs  subdivide.rs
crates/sdf/: Cargo.toml
crates/sdf/proptest-regressions/operators/: translate.txt
crates/sdf/src/: error.rs  lib.rs  traits.rs
crates/sdf/src/combinators/: intersection.rs  mod.rs  smooth_intersection.rs  smooth_union.rs  subtraction.rs  union.rs  xor.rs
crates/sdf/src/operators/: limited_repeat.rs  mod.rs  repeat.rs  sym.rs  translate.rs  uniform_scale.rs
crates/sdf/src/primitives/: axis_box.rs  capsule.rs  cylinder.rs  mod.rs  sphere.rs
crates/sdf/tests/: precision_tracking.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs  progress.rs
reference/: iq_distfunctions_exact_from_uploaded_html.md
scripts/: build_classic_deliverables.sh  build_some_stuff.sh  build_wafer_diag.sh  check_manifold.py
