[package]
name = "sibr-lattice"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI for SDF-based lattice generation. Thin orchestration over the sdf and lattice-gen crates."

[[bin]]
name = "sibr-lattice"
path = "src/main.rs"

[dependencies]
lattice-gen = { path = "../lattice-gen" }
glam = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
