[package]
name = "sdf"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Signed-distance functions with type-level precision tracking. Pure Rust; no GPU dependency."

[dependencies]
glam = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }

[features]
default = []
serde = ["dep:serde", "glam/serde"]

[lints]
workspace = true
