[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Workspace build / dev / post-processing tools. Not a library."
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
meshopt = "0.4"
stl_io = "0.8"

[lints]
workspace = true
